# futures-data-core

./: .gitignore  ARCHITECTURE.md  CODE_WIKI.md  DATA_DICTIONARY.md  README.md  pyproject.toml
config/: settings.yaml
datacore/: __init__.py  alert.py  api.py  api_async.py  api_f10.py  cli.py  config.py  fdc_compat.py  issue.py  stream.py
datacore/adjustment/: __init__.py  engine.py  registry.py
datacore/cleaning/: __init__.py  date_align.py  duplicate_merge.py  outlier_filter.py  unit_unify.py
datacore/collectors/: __init__.py
datacore/core/: __init__.py  data_freshness.py  types.py
datacore/equity/: __init__.py  equity_provider.py  financial.py
datacore/futures/: __init__.py  futures_provider.py
datacore/indicators/: __init__.py  core.py  legacy_numpy.py  talib_wrapper.py  tdx_compat.py  trend_maturity.py
datacore/models/: __init__.py  enums.py  futures.py  ohlcv.py  payload.py
datacore/news/: news_provider.py
datacore/operations/: __init__.py  config_tools.py  crawl_retry.py  error_log.py
datacore/qlib_adapter/: __init__.py  calendar.py  instrument.py  provider.py
docs/: UNIFIED_DATA_HUB_PLAN.md
tests/: test_adjustment.py  test_api.py  test_cleaning.py  test_collectors.py  test_contract_mapper.py  test_equity_mock.py  test_fdc_compat.py  test_futures.py  test_futures_mock.py  test_futures_new_providers.py  test_indicators.py  test_issue.py  test_models.py  test_news.py  test_news_providers.py  test_operations.py  test_phase1.py  test_qlib_adapter.py  test_registry.py  test_resampler.py  test_store.py  test_tools.py  test_validation.py
(+89 files in other folders)
